--- a/front/Platender.Front/Components/ImageDialog.razor
+++ b/front/Platender.Front/Components/ImageDialog.razor
@@ -1,4 +1,4 @@
-<MudDialog ContentStyle="max-width:80%; min-width:50%; max-heigh: 80%; min-heigh: 80%; width:1000px ">
+<MudDialog ContentStyle="max-width:80%; min-width:150px; max-heigh: 80%; min-heigh: 150px; width:1000px ">
     <DialogContent>
         <MudImage class="object-center" Src=@Image Fluid="true" ObjectFit="ObjectFit.Fill" Elevation="25" />
         
