Like system improvements

--- a/front/Platender.Front/Components/Comment.razor
+++ b/front/Platender.Front/Components/Comment.razor
@@ -32,10 +32,13 @@
     @if(ShowActionButtons)
     {
         <MudCardActions style="display: flex; flex-direction: row-reverse;">
-            <MudIconButton Icon="@Icons.Material.Filled.ThumbUpOffAlt" @onclick=HandleFirstButtonClick></MudIconButton>
-            <MudText Style="color: #0cff04">@FirstButtonField</MudText>
-            <MudIconButton Icon="@Icons.Material.Filled.ThumbDownOffAlt" @onclick=HandleSecondButtonClick></MudIconButton>
-            <MudText Style="color: #ff0000">@SecondButtonField</MudText>
+            <LikeComponent 
+            Id="@Id"
+            LikeAmount="@LikeAmount"
+            DislikeAmount="@DislikeAmount"
+            LikeButtonAction="@LikeButtonAction"
+            DislikeButtonAction="@DislikeButtonAction"
+            UserReaction="@UserReaction"></LikeComponent>
         </MudCardActions>
     }
 </MudCard>
@@ -60,22 +63,17 @@
     [Parameter]
     public string? Date { get; set; }
     [Parameter]
-    public int? FirstButtonField { get; set; }
+    public int? LikeAmount { get; set; }
     [Parameter]
-    public int SecondButtonField { get; set; }
+    public int DislikeAmount { get; set; }
     [Parameter]
     public bool ShowActionButtons { get; set; }
     [Parameter]
-    public string FirstButtonName { get; set; }
+    public EventCallback<Guid> LikeButtonAction { get; set; }
     [Parameter]
-    public string SecondButtonName { get; set; }
+    public EventCallback<Guid> DislikeButtonAction { get; set; }  
     [Parameter]
-    public EventCallback<Guid> FirstButtonAction { get; set; }
-    [Parameter]
-    public EventCallback<Guid> SecondButtonAction { get; set; }  
-
-    private bool _isLiked = false;
-    private bool _isDisliked = false;
+    public string? UserReaction { get; set; }
 
     private void OpenDialog()
     {
@@ -83,66 +81,5 @@
         parameters.Add(x => x.Image, Image);
         var options = new DialogOptions { ClassBackground = "my-custom-class", CloseOnEscapeKey = true, NoHeader = true};
         DialogService.Show<ImageDialog>("Simple Dialog", parameters, options);
-    }
-
-    private async Task HandleFirstButtonClick()
-    {
-        if(FirstButtonAction.HasDelegate)
-        {
-            await FirstButtonAction.InvokeAsync(Id);
-        }
-    }
-
-    private async Task HandleSecondButtonClick()
-    {
-        if(SecondButtonAction.HasDelegate)
-        {
-            await SecondButtonAction.InvokeAsync(Id);
-            SecondButtonField++;
-        }
-    }
-
-    private void ToggleLike()
-    {
-        if (_isLiked)
-        {
-            _isLiked = false;
-            FirstButtonField--;
-
-            return;
-        }
-        
-        if (_isDisliked)
-        {
-            _isDisliked = false;
-            SecondButtonField--;
-
-            return;
-        }
-
-        _isLiked = true;
-        FirstButtonField++;
-    }
-
-    private void ToggleDislike()
-    {
-        if (_isDisliked)
-        {
-            _isDisliked = false;
-            SecondButtonField--;
-
-            return;
-        }
-
-        if (_isLiked)
-        {
-            _isLiked = false;
-            FirstButtonField--;
-
-            return;
-        } 
-
-        _isDisliked = true;
-        SecondButtonField++;
     }
 }
