--- a/front/Platender.Front/Components/Comment.razor
+++ b/front/Platender.Front/Components/Comment.razor
@@ -9,23 +9,20 @@
             </div>
             <MudText Style="color: #000000">@Date</MudText>
         </div> 
-        <div style="margin-left: 5%;">
-            <MudPaper Elevation="5" Square="true">
-                <MudText>@Content</MudText>
+        <div style="margin-left: 5%; display: flex; justify-content: space-between;   flex-shrink: 3;">
+            <MudPaper Elevation="3" Square="true"style="width:90%; margin:0 3% 0 2%; padding: 5%; border-radius:20px;">
+                <MudText >@Content</MudText>
             </MudPaper>
             @if(!string.IsNullOrWhiteSpace(Image))
             {
+                <div style="max-width: 45%; ">
                 <MudImage 
                     Class="cursor-zoom-in" 
                     Src=@Image 
                     ObjectFit="MudBlazor.ObjectFit.ScaleDown"
-                    ObjectPosition="MudBlazor.ObjectPosition.Center"
-                    Style="
-                    padding-top: 1%;
-                    border-radius: 10px; 
-                    min-width: 150px; 
-                    min-heigh: 150px;"
-                    @onclick="OpenDialog"></MudImage>       
+                    Style="border-radius: 20px ;"
+                    @onclick="OpenDialog" Fluid="true"></MudImage>       
+                </div>
             }       
         </div>
     </MudCardContent>
