--- a/front/Platender.Front/Pages/Plates.razor
+++ b/front/Platender.Front/Pages/Plates.razor
@@ -2,51 +2,71 @@
 @using Platender.Front.Components
 @using Platender.Front.Models.Enums
 
-<div style="margin: 5%; margin-left: 5%; margin-top: 0px; margin-bottom: 0px; margin-right: 5%">
-        <div class="d-flex align-center justify-space-between">
-            <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" OnClick="GetPlates">Submit</MudButton>
-        </div>
+<div style="margin: 0 10% 0 10%;">
+       
     <MudPaper>
-	<div style="
-        display: flex; 
-        justify-content: flex-start; 
-        border: 1px solid #000000; 
-        border-radius: 10px;">
-	<div style="
-        max-width: 30%; 
-        max-height: 30%; 
-        text-align: center;
-        border:1px solid magenta; 
-        color: #ffffff; 
-        border-radius: 10px 0 0 10px;
-        text-transform: uppercase; 
-        font-size: 16px">		
-        <MudSelect 
-            @bind-Value="CultureCode" 
-            Label="Select Culture Code" 
-            HelperText="Culture Code" 
-            OpenIcon="@Icons.Material.Filled.LocalDrink" 
-            AdornmentColor="Color.Secondary">
-                <MudSelectItem T="CultureCode?" Value="null">---</MudSelectItem>"
-                @foreach (CultureCode cultureCode in Enum.GetValues(typeof(CultureCode)))
-                {
-                    <MudSelectItem T="CultureCode?" value="@cultureCode">@cultureCode</MudSelectItem>
-                }
-        </MudSelect>
-	</div>
-		<div style="display: flex; flex-grow:1; justify-content: center; align-items: center; font-size: 35px; text-transform: uppercase;">
-            <MudTextField T="string" @bind-Value="Numbers" Label="Car Plate Numbers" RequiredError="Car plate numbers are required!" />
+        <div style="
+            display: flex; 
+            justify-content: flex-start; 
+            border: 1px solid #000000; 
+            border-radius: 10px;">
+            <div style="
+                padding: 0 1% 1% 1%;
+                border-right: 1px solid #000000">		
+                <MudSelect 
+                    @bind-Value="CultureCode" 
+                    Label="Select Culture Code" 
+                    Style="
+                        min-width: 200px; 
+                        max-width:200px
+                        " 
+                    Clearable="true"
+                    AdornmentColor="Color.Secondary">
+                        <MudSelectItem T="CultureCode?" Value="null">---</MudSelectItem>
+                        @foreach (CultureCode cultureCode in Enum.GetValues(typeof(CultureCode)))
+                        {
+                            <MudSelectItem T="CultureCode?" value="@(cultureCode)"><MudText>@cultureCode</MudText></MudSelectItem>
+                        }
+                </MudSelect>
+            </div>
+            <div style="
+                display: flex; 
+                flex-grow:1; 
+                padding: 0 1% 1% 1%;
+                font-size: 35px;
+                text-transform: uppercase;">
+                <MudTextField 
+                    T="string" 
+                    @bind-Value="Numbers"
+                    Label="Car Plate Numbers"
+                    RequiredError="Car plate numbers are required!" />
+            </div>
         </div>
-	</div>
-</MudPaper>
-
+    </MudPaper>
+ <div class="d-flex">
+        <MudButton
+            Disabled="@_processing"
+            Variant="Variant.Filled" 
+            Color="Color.Primary" 
+            Class="ml-auto" 
+            OnClick="GetPlates">
+            @if (_processing)
+            {
+                <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true"/>
+                <MudText Class="ms-2">Searching</MudText>
+            }
+            else
+            {
+                <MudText>Search</MudText>
+            }</MudButton>
+    </div>
     @if(IsGetPlatesSend)
     {
         @if(_plates.Items.Any())
         {
             @foreach(var plate in _plates.Items)
             {
-                <div>
+                <div style="padding: 0.5rem 0 0.5rem 0;">
                     <EUPlate PlateId="@plate.Id" CultureCode="@plate.Culture" Number="@plate.Number" OnClickAction="@MoveToPlate"></EUPlate>
                 </div>
             }
@@ -56,6 +76,7 @@
             <MudPaper Class="pa-16 ma-2" Elevation="3">
                 <div>
                     <MudText>Plate was not found, do you want to save that plate?</MudText>
+                    <EUPlate CultureCode="@SentCultureCode.ToString()" Number="@SentNumbers"></EUPlate>
                 </div>
                 <div class="d-flex align-center">
                     <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" @onclick="PostPlate">Save Plate</MudButton>
